sonarqube/templates/deployment-db-sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarqube
    template: postgresql-persistent-template
  name: sonardb
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: sonardb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: sonardb
    spec:
      # initContainers:
      # - name: take-data-dir-ownership
      #   command:
      #     - /bin/sh
      #     - '-c'
      #   volumeMounts:
      #     - name: sonardb-data
      #       mountPath: /var/lib/pgsql/data
      #   image: ubi8/ubi-minimal
      #   args:
      #     - mkdir -p /var/lib/pgsql/data; chmod -R 775 /var/lib/pgsql/data;
      containers:
      - env:
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: sonardb
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: sonardb
        - name: POSTGRESQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: database-name
              name: sonardb
        image: image-registry.openshift-image-registry.svc:5000/openshift/postgresql
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c
              'SELECT 1'
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            memory: 1Gi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: sonardb-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: sonardb-data
        persistentVolumeClaim:
          claimName: sonardb
