sonarqube/templates/service-db-sonarqube.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}
  labels:
    app: sonarqube
    template: postgresql-persistent-template
  name: sonardb
spec:
  ports:
  - name: postgresql
    port: 5432
  selector:
    name: sonardb
