sonarqube/templates/service-sonarqube.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube
  name: sonarqube
spec:
  ports:
  - name: 9000-tcp
    port: 9000
  selector:
    deploymentconfig: sonarqube
